updates to plotting notebooks

--- a/notebooks/Extract_higher_info.ipynb
+++ b/notebooks/Extract_higher_info.ipynb
@@ -2,72 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/site-packages/ipykernel_launcher.py:1: UserWarning: Using `import I3Tray` or `from I3Tray import *` is now considered depricated. Please switch to using `from icecube.icetray import I3Tray`\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<char, std::allocator<char> > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<OMKey, std::allocator<OMKey> > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<short, std::allocator<short> > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<int, std::allocator<int> > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<unsigned int, std::allocator<unsigned int> > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<unsigned long, std::allocator<unsigned long> > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for std::vector<double, std::allocator<double> > already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for CorsikaModelEnums::Status already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for I3PrimaryInjectorInfo already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for boost::shared_ptr<I3PrimaryInjectorInfo> already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for I3CorsikaInfo already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for boost::shared_ptr<I3CorsikaInfo> already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for I3TopInjectorInfo already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for boost::shared_ptr<I3TopInjectorInfo> already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for CorsikaModelEnums::LEHadronModel already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/cvmfs/icecube.opensciencegrid.org/py3-v4.1.1/RHEL_8_x86_64/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: to-Python converter for CorsikaModelEnums::HEHadronModel already registered; second conversion method ignored.\n",
-      "  return f(*args, **kwds)\n",
-      "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/lib/icecube/LeptonInjector/__init__.py:1: UserWarning: Deprication Warning: load_pybindings() is deprecated use `from icecube._your_module import *`\n",
-      "  from icecube.load_pybindings import load_pybindings\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'icecube.LeptonInjector.oscNext_frame_objects_weighting'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c7a71fd5b5e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0micecube\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0micetray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataio\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataclasses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msimclasses\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0micecube\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLeptonInjector\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mweight_hnl_generation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_generation_weighting_files\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight_hnl_lifetime_framewise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0micecube\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLeptonInjector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moscNext_frame_objects_weighting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcreate_weight_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLeptonWeighter\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mLW\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'icecube.LeptonInjector.oscNext_frame_objects_weighting'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from I3Tray import I3Tray\n",
     "from icecube import icetray, dataio, dataclasses, simclasses\n",
     "from icecube.LeptonInjector import weight_hnl_generation, load_generation_weighting_files, weight_hnl_lifetime_framewise\n",
-    "from icecube.LeptonInjector.oscNext_frame_objects_weighting import create_weight_dict\n",
+    "from icecube.LeptonInjector.oscnext_frame_objects_weighting import create_weight_dict\n",
     "import LeptonWeighter as LW\n",
     "\n",
     "import numpy as np\n",
@@ -85,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,32 +38,45 @@
     "output_filename = f\"extracted_info_{level}.npy\"\n",
     "\n",
     "# Let's just grab the first 100 files.\n",
-    "L2_files = sorted(glob.glob(os.path.join(mc_dir, level, \"*.i3.zst\")))[:100]\n"
+    "L2_files = sorted(glob.glob(os.path.join(mc_dir, level, \"*.i3.zst\")))[:100]\n",
+    "det_files=sorted(glob.glob(os.path.join(mc_dir, 'Det', \"*.i3.zst\")))[:100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/L2/1_1.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/L2/1_2.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/L2/1_3.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/L2/1_5.i3.zst']\n"
+      "['/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/Det/0_0.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/Det/0_99.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/Det/1_1.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/Det/1_2.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/Det/1_3.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/Det/1_4.i3.zst', '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/190200/Det/1_5.i3.zst']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(L2_files)"
+    "print(det_files)\n",
+    "len(det_files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Should read det level files\n",
     "def read_files(files, nfiles=None):\n",
     "    passed_filters, MCPESeriesMap, MCPESeriesMap_withNoise, trigger_types, trigger_sources = [], [], [], [], []\n",
     "    \n",
@@ -129,23 +86,27 @@
     "    # Loop over the files\n",
     "    for f in tqdm(files):\n",
     "        i3file = dataio.I3File(f)\n",
-    "\n",
+    "        \n",
     "        # And loop through frames for this file\n",
     "        while i3file.more():\n",
     "            frame = i3file.pop_frame()\n",
     "            num_frames +=1\n",
-    "            #if frame.Stop != icetray.I3Frame.Physics: continue\n",
-    "            # Variables relevant at Det level\n",
-    "            if not frame.Has(\"QFilterMask\"):\n",
-    "                continue\n",
-    "            \n",
-    "            mask = frame[\"QFilterMask\"]\n",
-    "            for qfilter in mask:\n",
-    "                if trigger.fired:\n",
-    "                    key = trigger.key\n",
-    "                    trigger_types.append(str(dataclasses.TriggerKey.get_type_string(key, key.type)))\n",
-    "                    trigger_sources.append(str(dataclasses.TriggerKey.get_source_string(key, key.source)))\n",
-    "            \n",
+    "#             if frame.Stop != icetray.I3Frame.Physics: \n",
+    "#                 print(\"not a physics frame\")\n",
+    "#                 continue\n",
+    "#             # Variables relevant at Det level\n",
+    "#             if not frame.Has(\"QFilterMask\"):\n",
+    "#                 print(\"no filter mask\")\n",
+    "#                 continue\n",
+    "#             print(\"here we aare\")\n",
+    "#             mask = frame[\"QFilterMask\"]\n",
+    "#             for qfilter in mask:\n",
+    "#                 print(mask)\n",
+    "#                 if trigger.fired:\n",
+    "#                     key = trigger.key\n",
+    "#                     trigger_types.append(str(dataclasses.TriggerKey.get_type_string(key, key.type)))\n",
+    "#                     trigger_sources.append(str(dataclasses.TriggerKey.get_source_string(key, key.source)))\n",
+    "#                     print(\"fired\")\n",
     "            \n",
     "            # Variables relevant at Det level\n",
     "            if not frame.Has(\"MCPESeriesMap_withNoise\"):\n",
@@ -163,13 +124,13 @@
     "    print(num_frames)\n",
     "    print(num_noisy)\n",
     "\n",
-    "    return {\"MCPESeriesMap\": MCPESeriesMap, \"MCPESeriesMap_withNoise\": MCPESeriesMap_withNoise, \n",
-    "                         \"trigger_types\": trigger_types, \"trigger_sources\": trigger_sources}\n"
+    "    return {\"MCPESeriesMap\": MCPESeriesMap, \"MCPESeriesMap_withNoise\": MCPESeriesMap_withNoise,} \n",
+    "#                          \"trigger_types\": trigger_types, \"trigger_sources\": trigger_sources}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -178,15 +139,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:01<00:00,  5.92it/s]"
+      "100%|██████████| 7/7 [00:01<00:00,  5.65it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "674\n",
-      "555\n"
+      "750\n",
+      "629\n"
      ]
     },
     {
@@ -199,6 +160,26 @@
    ],
    "source": [
     "quack = read_files(det_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "map0 = quack['MCPESeriesMap'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "properties=(quack['MCPESeriesMap'][0].iteritems())"
    ]
   },
   {
@@ -217,28 +198,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "iteratable=((properties[1,0].itervalues()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "scrolled": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ I3MCPE::\n",
-      "  Time :9898.8\n",
-      "  NPE  :1\n",
-      "  I3ParticleID(214195337436020496, 2659) ]]\n"
+      "(OMKey(3,48,0), [<icecube._simclasses.I3MCPE object at 0x150fdbfde990>])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(properties))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'iteratable' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-7ce84efb784d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miteratable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'iteratable' is not defined"
      ]
     }
    ],
