--- a/notebooks/plot_gen_level.ipynb
+++ b/notebooks/plot_gen_level.ipynb
@@ -17,10 +17,26 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/lib/icecube/LeptonInjector/__init__.py:1: UserWarning: Deprication Warning: load_pybindings() is deprecated use `from icecube._your_module import *`\n",
+      "  from icecube.load_pybindings import load_pybindings\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/user/lfischer/plots_all/2023/05_combined_gen_level_plots/\n"
+      "/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/plots/gen_verification\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/lib/icecube/LeptonInjector/cascade_generator_functions.py:4: UserWarning: Using `import I3Tray` or `from I3Tray import *` is now considered depricated. Please switch to using `from icecube.icetray import I3Tray`\n",
+      "  from I3Tray import I3Units\n"
      ]
     }
    ],
@@ -41,8 +57,7 @@
     "from icecube.LeptonInjector import hnl_weighting\n",
     "from icecube.LeptonInjector import hdf5_to_feather\n",
     "\n",
-    "# base_plot_dir = '/data/user/lfischer/plots_all/2023/02_single_mass_gen_level_lots/'\n",
-    "base_plot_dir = '/data/user/lfischer/plots_all/2023/05_combined_gen_level_plots/'\n",
+    "base_plot_dir = '/n/holylfs05/LABS/arguelles_delgado_lab/Lab/HNL_MC/plots/gen_verification'\n",
     "print(base_plot_dir)"
    ]
   },
@@ -60,13 +75,7 @@
    "outputs": [],
    "source": [
     "sim_sets = [    \n",
-    "    '190614',\n",
-    "    '190615',\n",
-    "    '190616',\n",
-    "    \n",
-    "    '190619',\n",
-    "    '190618',\n",
-    "    '190617',\n",
+    "    '190200',# ID for test set\n",
     "]\n",
     "\n",
     "masses = [\n",
@@ -2377,7 +2386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
